[project]
name = "ayra-lib"
version = "1.0.0"
description = "Shared library for Ayra tools — config, parsers, types, registry."
requires-python = ">=3.13"

dependencies = [
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ayra_lib"]
