[project]
name = "flashcard-quiz"
version = "1.0.0"
description = "Interactive CLI quiz from vault flashcards. Parses markdown, randomizes, tracks score."
requires-python = ">=3.13"

dependencies = [
    "ayra-lib",
]

[project.scripts]
flashcard-quiz = "flashcard_quiz.cli:main"

[tool.uv.sources]
ayra-lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flashcard_quiz"]
